mod(purge): fix unknown msg error
`mention_author` does nothing here, no point for
it to exist here. It'll just break.

Signed-off-by: Andreas Papacharalampous <andreas@apap04.com>

--- a/lang/en.yaml
+++ b/lang/en.yaml
@@ -10,7 +10,7 @@ cmds:
       res_reason: 'successfully kicked %{member} for "%{reason}"'
     purge:
       desc: 'Mass delete messages at once.'
-      res: 'purged %{amount} message(s)'
+      res: '%{ctx}, purged %{amount} message(s)'
   # "Fun" commands
     who:
       desc: 'Get info about a user.'
