[MERGE] events: added support for channel configurations
Signed-off-by: Andreas Papacharalampous <andreas@apap04.com>
Co-authored-by: flower <flower@apap04.com>

--- a/lang/en.yaml
+++ b/lang/en.yaml
@@ -28,6 +28,7 @@ cmds:
 events:
   command_error:
     title: 'Something bad happened.. This issue has been reported. Join [our server](%{discord_invite}) if you need help!'
+    title_limited: 'Something bad happened.. This issue has been reported. Join [our server](%{discord_invite}) if you need help! Support may be limited.'
     footer: 'Reference ID: %{ref_id}'
   missing_permission: "I can't do that :("
   missing_args: 'Are you missing something?'
