--- a/lang/en.yaml
+++ b/lang/en.yaml
@@ -27,9 +27,7 @@ cmds:
 
 events:
   command_error:
-    title: 'Something bad happened.. This issue has been reported. Join [our server](%{discord_invite}) if you need help!'
-    title_limited: 'Something bad happened.. This issue has been reported. Join [our server](%{discord_invite}) if you need help! Support may be limited.'
-    footer: 'Reference ID: %{ref_id}'
+    title: 'An error occurred trying to run this command.'
   missing_permission: "I can't do that :("
   missing_args: 'Are you missing something?'
   forbidden_dm: "I can't DM you, turn on your DMs!"
