--- a/lang/en.yaml
+++ b/lang/en.yaml
@@ -3,10 +3,14 @@ cmds:
   # Moderation commands
   ban:
     desc: "Ban a user."
+    option_member: 'The user you want to ban'
+    reason: 'Your reason'
     res_noreason: "<:smoke:953134627608993842>"
     res_reason: "<:smoke:953134627608993842>"
   kick:
     desc: "Kick a user."
+    option_member: 'The user you want to ban'
+    reason: 'Your reason'
     res_noreason: "👍"
     res_reason: "👍"
   purge:
