mod(mute): use timeparse for muting
Signed-off-by: Andreas <a@yeat.dev>

--- a/lang/en.yaml
+++ b/lang/en.yaml
@@ -63,7 +63,8 @@ cmds:
     desc: "Mute a person."
     no_permission: "I can't mute this person."
     res_existing_mute: "%{person} is already muted."
-    res: "%{person} has been muted."
+    res: "%{person} has been muted for %{duration}."
+    res_perm: "%{person} has been muted."
   unmute:
     desc: "Un-mute a person."
     res_not_muted: "%{person} isn't muted."
