role: add error message
Signed-off-by: Greek <a@yeat.dev>

--- a/lang/en.yaml
+++ b/lang/en.yaml
@@ -42,6 +42,7 @@ cmds:
       res:
         success: 'Added "%{role}" to %{user}.'
         success_remove: 'Removed "%{role}" from %{user}.'
+        error: "I couldn't add that role to %{user}."
 
   # Moderation commands
   ban:
