mod(kick/ban): add args to final msg
Signed-off-by: Andreas <a@yeat.dev>

--- a/lang/en.yaml
+++ b/lang/en.yaml
@@ -68,15 +68,15 @@ cmds:
     option_member: "The person you want to ban"
     option_reason: "Reason to ban a person."
     reason: "Your reason"
-    res_noreason: "<:smoke:953134627608993842>"
-    res_reason: "<:smoke:953134627608993842>"
+    res_noreason: "Banned %{user}."
+    res_reason: "Banned %{user} for %{reason}."
   kick:
     desc: "Kick a person."
     option_member: "The person you want to kick"
     option_reason: "Reason to kick a person."
     reason: "Your reason"
-    res_noreason: "👍"
-    res_reason: "👍"
+    res_noreason: "Kicked %{user}."
+    res_reason: "Kicked %{user} for %{reason}."
   purge:
     desc: "Mass delete messages at once."
     option_amount: "Amount of messages you want to clear."
