--- a/lang/en.yaml
+++ b/lang/en.yaml
@@ -76,7 +76,7 @@ cmds:
     option_reason: "Reason to kick a person."
     reason: "Your reason"
     res_noreason: "Kicked %{user}."
-    res_reason: "Kicked %{user} for %{reason}."
+    res_reason: "Kicked %{user} for this reason: %{reason}."
   purge:
     desc: "Mass delete messages at once."
     option_amount: "Amount of messages you want to clear."
